--- a/src/GeekStream.Web/Views/Chats/Chat.cshtml
+++ b/src/GeekStream.Web/Views/Chats/Chat.cshtml
@@ -1,23 +1,45 @@
-﻿@model GeekStream.Core.Entities.Chat
+﻿@using System.Security.Claims
+@model GeekStream.Core.ViewModels.ChatViewModel
 @{
 
     Layout = "~/Views/Shared/_ChatsLayout.cshtml";
 }
+<div class="col-4">
+    @foreach (var chat in Model.Chats)
+    {
+        var otherUser =  @chat.Users.FirstOrDefault(c => c.UserId != User.FindFirst(ClaimTypes.NameIdentifier)?.Value)?.User;
+
+        <div class="card">
+            <div class="card-body">
+                <a class="h4"asp-controller="Chats" asp-action="Chat" asp-route-id="@chat.Id">
+                @otherUser.FirstName @otherUser.LastName
+                 </a>
+
+            </div>
+        </div>
+    }
+</div>
+<div class="col-8">
+
 <div class="chat-body">
-    @foreach(var message in 
-        Model.Messages){
+    @foreach (var message in 
+        Model.Messages)
+    {
         <div class="message">
             <header>@message.Name:</header>
             <p>@message.Text</p>
             <footer>@message.Timestamp</footer>
         </div>
     }
+
+    </div>
+        <form class="chat-input" onsubmit="sendMessage(event)" asp-controller="Chats" asp-action="SendMessage">
+            <input type="hidden" name="roomId" value="@Model.Id">
+            <input type="text" name="message" id="message-input">
+            <button type="submit">Send</button>
+        </form>
+
 </div>
-<form class="chat-input" onsubmit="sendMessage(event)" asp-controller="Chats" asp-action="SendMessage">
-    <input type="hidden" name="roomId" value="@Model.Id">
-    <input type="text" name="message" id="message-input">
-    <button type="submit">Send</button>
-</form>
 
 @section scripts {
     <script src="/lib/microsoft/signalr/dist/browser/signalr.js"></script>
