--- a/src/GeekStream.Web/Views/Shared/_Navbar.cshtml
+++ b/src/GeekStream.Web/Views/Shared/_Navbar.cshtml
@@ -17,6 +17,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="Index">Статьи</a>
                         </li>
                         <li class="nav-item mr-2">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Chats" asp-action="Private">Дискуссии</a>
+                        </li>
+                        <li class="nav-item mr-2">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="All">Категории</a>
                         </li>
                         <li class="nav-item mr-2">
