--- a/src/GeekStream.Web/Views/Chats/Private.cshtml
+++ b/src/GeekStream.Web/Views/Chats/Private.cshtml
@@ -8,14 +8,19 @@
     Layout = "~/Views/Shared/_ChatsLayout.cshtml";
 }
 
-<div class="chat-body">
+<div class="col-4">
     @if (Model.Any())
     {
     @foreach (var chat in Model)
-    {
-        <a class="room-button" asp-controller="Chats" asp-action="Chat" asp-route-id="@chat.Id">
-            @chat.Users.FirstOrDefault(x => x.UserId != userId)?.User.UserName
-        </a>
+    {        <div class="card">
+            <div class="card-body">
+                <a class="h4"asp-controller="Chats" asp-action="Chat" asp-route-id="@chat.Id">
+            @chat.Users.FirstOrDefault(x => x.UserId != userId)?.User.FirstName 
+            @chat.Users.FirstOrDefault(x => x.UserId != userId)?.User.LastName
+                 </a>
+
+            </div>
+        </div>
     }
     }
 </div>
