--- a/src/GeekStream.Web/Views/Shared/_ChatsLayout.cshtml
+++ b/src/GeekStream.Web/Views/Shared/_ChatsLayout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="warticleIdth=device-warticleIdth, initial-scale=1.0" />
     <title>@ViewData["Title"] - GeekStream</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <header>
