Add Approval and Review system

--- a/src/GeekStream.Web/Views/Articles/Create.cshtml
+++ b/src/GeekStream.Web/Views/Articles/Create.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Create";
 }
-<form asp-action="" enctype="multipart/form-data" method="post">
+<form asp-action="Create" enctype="multipart/form-data" method="post">
 
 <div class="navbar">
     <h5>Новая статья</h5>
