--- a/src/GeekStream.Web/Views/Articles/Edit.cshtml
+++ b/src/GeekStream.Web/Views/Articles/Edit.cshtml
@@ -1,21 +1,16 @@
-﻿@model GeekStream.Core.ViewModels.ArticleEditViewModel;
+﻿@model GeekStream.Core.ViewModels.ArticleEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
 }
-
-<h1>Edit</h1>
-
-<h4>Article</h4>
-<hr />
-<form asp-action="Edit" enctype="multipart/form-data" method="post">
+<form asp-controller="Articles" asp-action="Edit" enctype="multipart/form-data" method="post">
 
 <div class="navbar">
-    <h5>Черновик</h5>
-        <div class="text-right mb-0">
+    <h5>Новая статья</h5>
+              <div class="text-right mb-0">
             <div class="form-group">
-                <input type="submit" value="Сохранить черновик" class="btn btn-light mr-2" />
-                <input type="submit" value="Опубликовать" class="btn btn-primary" />
+                <input type="submit" name="action" id="save" value="Сохранить черновик" class="btn btn-light mr-2" />
+                <input type="submit" name="action" id="publish" value="Опубликовать" class="btn btn-primary" />
             </div>
         </div>
 </div>
@@ -41,12 +36,11 @@
                 <textarea asp-for="Content" class="form-control text-muted" rows="10"></textarea>
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                    <label  asp-for="FilePaths"></label>
-                    <input type="file" name="files" multiple=""/>
+            <div class="custom-file">
+                <input type="file" class="custom-file-input" id="customFile" name="files">
+                <label class="custom-file-label" for="customFile">Choose file</label>
             </div>
     </form>
-
 
 <div>
     <a asp-action="Index">Back to List</a>
