Return article edit. Add right review

--- a/src/GeekStream.Web/Views/Admin/EditCategory.cshtml
+++ b/src/GeekStream.Web/Views/Admin/EditCategory.cshtml
@@ -1,7 +1,7 @@
 ﻿@model GeekStream.Core.Entities.Category
 
 @{
-    ViewData["Title"] = "Edit Category";
+    ViewData["Title"] = "EditArticle Category";
 }
 
     <form method="post" class="mt-3" asp-action="EditCategory">
