--- a/src/GeekStream.Web/Views/Admin/EditRole.cshtml
+++ b/src/GeekStream.Web/Views/Admin/EditRole.cshtml
@@ -1,7 +1,7 @@
 ﻿@model GeekStream.Core.ViewModels.EditRoleViewModel
 
 @{
-    ViewData["Title"] = "Edit Role";
+    ViewData["Title"] = "EditArticle Role";
 }
 
 <form method="post" class="mt-3">
