--- a/src/GeekStream.Web/Views/Admin/ListCategories.cshtml
+++ b/src/GeekStream.Web/Views/Admin/ListCategories.cshtml
@@ -20,7 +20,7 @@
                     </h5>
             </div>
                 <div class="card-footer">
-                    <a class="btn btn-primary" asp-controller="Admin" asp-action="EditCategory" asp-route-id="@category.Id">Edit</a>
+                    <a class="btn btn-primary" asp-controller="Admin" asp-action="EditCategory" asp-route-id="@category.Id">EditArticle</a>
                     <a class="btn btn-danger" asp-controller="Admin" asp-action="DeleteCategory" asp-route-id="@category.Id">Delete</a>
                     <a class="btn btn-outline-primary" asp-action="Index">Back</a>
                 </div>
