--- a/src/GeekStream.Web/Views/Account/Login.cshtml
+++ b/src/GeekStream.Web/Views/Account/Login.cshtml
@@ -30,6 +30,10 @@
             <div class="form-group">
                 <button type="submit" class="btn btn-primary">Log in</button>
             </div>
+            
+            <div>
+                <a asp-action="ForgotPassword">Забыли пароль?</a>
+            </div>
             <div class="form-group">
                 <p>
                     <a asp-action="Register">Register as a new user</a>
