Add more ViewModels. Refactor code

--- a/src/GeekStream.Web/Views/Account/ForgotPassword.cshtml
+++ b/src/GeekStream.Web/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model GeekStream.Core.ViewModels.ForgotPasswordViewModel
+﻿@model GeekStream.Core.ViewModels.Account.ForgotPasswordViewModel
 
 <h2>Forgot Password</h2>
 <hr />
