--- a/src/GeekStream.Web/Views/Account/Login.cshtml
+++ b/src/GeekStream.Web/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model GeekStream.Core.ViewModels.LoginViewModel
+﻿@model GeekStream.Core.ViewModels.Account.LoginViewModel
 
 @{
     ViewData["Title"] = "Login";
