--- a/src/GeekStream.Web/Views/Account/Register.cshtml
+++ b/src/GeekStream.Web/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model GeekStream.Core.ViewModels.RegisterViewModel
+﻿@model GeekStream.Core.ViewModels.Account.RegisterViewModel
 
 @{
     ViewData["Title"] = "Register";
