--- a/src/GeekStream.Web/Views/Admin/CreateRole.cshtml
+++ b/src/GeekStream.Web/Views/Admin/CreateRole.cshtml
@@ -1,4 +1,4 @@
-﻿@model GeekStream.Core.ViewModels.CreateRoleViewModel
+﻿@model GeekStream.Core.ViewModels.Admin.CreateRoleViewModel
 
 @{
     ViewData["Title"] = "Create Role";
