--- a/src/GeekStream.Web/Views/Admin/EditRole.cshtml
+++ b/src/GeekStream.Web/Views/Admin/EditRole.cshtml
@@ -1,4 +1,4 @@
-﻿@model GeekStream.Core.ViewModels.EditRoleViewModel
+﻿@model GeekStream.Core.ViewModels.Admin.EditRoleViewModel
 
 @{
     ViewData["Title"] = "EditArticle Role";
