--- a/src/GeekStream.Web/Views/Articles/Delete.cshtml
+++ b/src/GeekStream.Web/Views/Articles/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model GeekStream.Core.ViewModels.ArticleViewModel;
+﻿@model GeekStream.Core.Entities.Article
 
 @{
     ViewData["Title"] = "Delete";
@@ -22,12 +22,6 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Content)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PublishedDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PublishedDate)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Rating)
