--- a/src/GeekStream.Web/Views/Articles/Details.cshtml
+++ b/src/GeekStream.Web/Views/Articles/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model GeekStream.Core.ViewModels.ArticleViewModel
+﻿@model GeekStream.Core.ViewModels.Article.ArticleDetailsViewModel
 
 @{
     ViewData["Title"] = "Details";
