--- a/src/GeekStream.Web/Views/Categories/Index.cshtml
+++ b/src/GeekStream.Web/Views/Categories/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using GeekStream.Core.Entities
-@model GeekStream.Core.ViewModels.CategoryViewModel
+@model GeekStream.Core.ViewModels.Category.CategoryViewModel
 
 @{
     ViewData["Title"] = Model.Name;
