--- a/src/GeekStream.Web/Views/Shared/_ArticleCard.cshtml
+++ b/src/GeekStream.Web/Views/Shared/_ArticleCard.cshtml
@@ -1,6 +1,5 @@
 ﻿@using GeekStream.Core.Entities
-@using Microsoft.EntityFrameworkCore
-@model GeekStream.Core.ViewModels.ArticleViewModel;
+@model GeekStream.Core.ViewModels.Article.ArticleDetailsViewModel;
 @{
     var articleId = @Model.Id;
 <div class="card mb-2">
