--- a/src/GeekStream.Web/Views/Shared/_ArticlesListCards.cshtml
+++ b/src/GeekStream.Web/Views/Shared/_ArticlesListCards.cshtml
@@ -1,5 +1,5 @@
 ﻿@using GeekStream.Core.Entities
-@model IEnumerable<GeekStream.Core.ViewModels.ArticleViewModel>
+@model IEnumerable<GeekStream.Core.ViewModels.Article.ArticleFeedViewModel>
 
 @foreach (var item in Model)
 {
