--- a/src/GeekStream.Web/Views/Users/UserProfile.cshtml
+++ b/src/GeekStream.Web/Views/Users/UserProfile.cshtml
@@ -1,5 +1,5 @@
 ﻿@using GeekStream.Core.Entities
-@model GeekStream.Core.ViewModels.UserViewModel
+@model GeekStream.Core.ViewModels.User.UserViewModel
 
 @{
     ViewData["Title"] = Model.UserName;
