--- a/src/GeekStream.Web/Views/Articles/Drafts.cshtml
+++ b/src/GeekStream.Web/Views/Articles/Drafts.cshtml
@@ -1,5 +1,5 @@
 ﻿@using GeekStream.Core.Entities
-@model IEnumerable<GeekStream.Core.ViewModels.ArticleViewModel>
+@model IEnumerable<GeekStream.Core.ViewModels.Article.ArticleDraftsViewModel>
 
 @{
     ViewData["Title"] = "Drafts";
@@ -21,29 +21,11 @@
                     </a>
                     @Html.DisplayFor(modelItem => item.PublishedDate)
                 </div>
-                <div class="navbar-left">
-                    <a asp-controller="Users" asp-action="UserProfile" asp-route-id="@item.AuthorId">
-                        <img class="user__icon" width="20" src="/images/@userIcon"/>
-                        @Html.DisplayFor(modelItem => item.Author)
-                    </a>
-                </div>
             </div>
             <a asp-controller="Articles" asp-action="Edit" asp-route-id="@item.Id">
                 <h3 class="card-title"> @Html.DisplayFor(modelItem => item.Title)</h3>
             </a>
-            <p>@Html.DisplayFor(modelItem => item.Content)</p>
             <div class="text-right mb-0">
-            <form asp-controller="Vote" asp-action="ProcessVotes">
-                <input type="hidden" asp-for="@articleId"/>
-                <input type="hidden" name="type" value="@VoteType.UpVote"/>
-                <input type="submit" class="btn btn-success"/>
-            </form>
-            <p>@Html.DisplayFor(modelItem => item.Rating)</p>
-                <form asp-controller="Vote" asp-action="ProcessVotes">
-                    <input type="hidden" asp-for="@articleId"/>
-                    <input type="hidden" name="type" value="@VoteType.DownVote"/>
-                    <input type="submit" class="btn btn-danger"/>
-                </form>
             </div>
         </div>
     </div>
