--- a/src/GeekStream.Web/Views/Home/Index.cshtml
+++ b/src/GeekStream.Web/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<GeekStream.Core.ViewModels.ArticleViewModel>
+﻿@model IEnumerable<GeekStream.Core.ViewModels.Article.ArticleFeedViewModel>
 
 @{
     ViewData["Title"] = "Index";
