Add more ViewModels

--- a/src/GeekStream.Web/Views/Admin/ListCategories.cshtml
+++ b/src/GeekStream.Web/Views/Admin/ListCategories.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<GeekStream.Core.Entities.Category>
+﻿@model IEnumerable<GeekStream.Core.ViewModels.Category.CategoriesListViewModel>
 
 @{
     ViewData["Title"] = "All Categories";
