Introduce acccount layout

--- a/src/GeekStream.Web/Views/Account/ConfirmEmail.cshtml
+++ b/src/GeekStream.Web/Views/Account/ConfirmEmail.cshtml
@@ -1,1 +1,7 @@
-﻿<h3>Thank you for confirming your email</h3>
+﻿
+@{
+
+    Layout = "~/Views/Shared/_AccountLayout.cshtml";
+}
+
+<h3>Thank you for confirming your email</h3>
