--- a/src/GeekStream.Web/Views/Account/ForgotPassword.cshtml
+++ b/src/GeekStream.Web/Views/Account/ForgotPassword.cshtml
@@ -1,5 +1,10 @@
 ﻿@model GeekStream.Core.ViewModels.Account.ForgotPasswordViewModel
 
+@{
+
+    Layout = "~/Views/Shared/_AccountLayout.cshtml";
+}
+
 <h2>Forgot Password</h2>
 <hr />
 <div class="row">
