--- a/src/GeekStream.Web/Views/Account/ResetPassword.cshtml
+++ b/src/GeekStream.Web/Views/Account/ResetPassword.cshtml
@@ -1,5 +1,7 @@
 ﻿@model GeekStream.Core.ViewModels.Account.ResetPasswordViewModel
-
+@{
+    Layout = "~/Views/Shared/_AccountLayout.cshtml";
+}
 <h2>Reset Password</h2>
 <hr />
 <div class="row">
