--- a/src/GeekStream.Web/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/src/GeekStream.Web/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,4 +1,10 @@
-﻿<h4>
+﻿@{
+
+    Layout = "~/Views/Shared/_AccountLayout.cshtml";
+}
+
+
+<h4>
     If you have an account with us, we have sent an email
     with the instructions to reset your password.
 </h4>
