--- a/src/GeekStream.Web/Views/Account/Logout.cshtml
+++ b/src/GeekStream.Web/Views/Account/Logout.cshtml
@@ -1,5 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    Layout = "~/Views/Shared/_AccountLayout.cshtml";
 }
+<div class="col-12"></div>
