--- a/src/GeekStream.Web/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/src/GeekStream.Web/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,3 +1,7 @@
-﻿<h4>
+﻿@{
+    Layout = "~/Views/Shared/_AccountLayout.cshtml";
+}
+
+<h4>
     Your password is reset. Please click <a asp-action="Login">here to login</a>
 </h4>
