Add account registration and login design

--- a/src/GeekStream.Web/Views/Account/ForgotPassword.cshtml
+++ b/src/GeekStream.Web/Views/Account/ForgotPassword.cshtml
@@ -4,19 +4,22 @@
 
     Layout = "~/Views/Shared/_AccountLayout.cshtml";
 }
-
-<h2>Forgot Password</h2>
-<hr />
-<div class="row">
-    <div class="col-md-12">
+<div class="card card-16px-border pr-5 pl-5 pt-4 pb-2">
+        <div class="card-title mb-0">
+            <img class="center" src="/images/NavBarLogo.png"/>
+            <h4 class="text-center mb-0">Забыли пароль? Не беда</h4>
+        </div>
+        <div class="card-body">
+            <p>Мы можем сбросить ваш пароль, а вы придумаете новый. Для этого укажите адрес почты, на которую вы зарегистрировали аккаунт </p>
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group mb-5">
                 <label asp-for="Email"></label>
-                <input asp-for="Email" class="form-control" />
+                <input asp-for="Email" class="form-control" placeholder="Введите email"/>
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+            <button type="submit" class="btn btn-primary float-right">Сбросить пароль</button>
+         </form>
+        </div>
     </div>
-</div>
+
