--- a/src/GeekStream.Web/Views/Account/ResetPassword.cshtml
+++ b/src/GeekStream.Web/Views/Account/ResetPassword.cshtml
@@ -2,25 +2,27 @@
 @{
     Layout = "~/Views/Shared/_AccountLayout.cshtml";
 }
-<h2>Reset Password</h2>
-<hr />
-<div class="row">
-    <div class="col-md-12">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <input asp-for="Token" type="hidden" />
-            <input asp-for="Email" type="hidden" />
-            <div class="form-group">
-                <label asp-for="Password"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ConfirmPassword"></label>
-                <input asp-for="ConfirmPassword" class="form-control" />
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-primary">Reset</button>
-        </form>
+<div class="card card-16px-border pr-5 pl-5 pt-4 pb-2">
+        <div class="card-title mb-0">
+            <img class="center" src="/images/NavBarLogo.png"/>
+            <h4 class="text-center mb-0">Задайте новый пароль</h4>
+        </div>
+        <div class="card-body">
+            <form method="post">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <input asp-for="Token" type="hidden"/>
+                <input asp-for="Email" type="hidden"/>
+                <div class="form-group">
+                    <label asp-for="Password"></label>
+                    <input asp-for="Password" class="form-control" placeholder="Ваш пароль"/>
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ConfirmPassword"></label>
+                    <input asp-for="ConfirmPassword" class="form-control" placeholder="Подтверждение пароля"/>
+                    <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                </div>
+                <button type="submit" class="btn btn-primary float-right">Сменить пароль</button>
+            </form>
+        </div>
     </div>
-</div>
