--- a/src/GeekStream.Web/Views/Shared/_AccountLayout.cshtml
+++ b/src/GeekStream.Web/Views/Shared/_AccountLayout.cshtml
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    <div class="container">
-        <div class="row">
+    <div class="outer">
+        <div class="middle">
+            <div class="inner">
                 @RenderBody()
+            </div>
         </div>
     </div>
 
