--- a/src/GeekStream.Web/Views/Shared/_ArticleCard.cshtml
+++ b/src/GeekStream.Web/Views/Shared/_ArticleCard.cshtml
@@ -2,8 +2,8 @@
 @model GeekStream.Core.ViewModels.Article.ArticleDetailsViewModel;
 @{
     var articleId = @Model.Id;
-<div class="card mb-2">
-    <div class="card-body rounded-lg">
+<div class="card mb-2 card-8px-border">
+    <div class="card-body">
         <div class="card-navbar justify-content-between">
             <div class="navbar-right">
                 <a name="category" asp-controller="Categories" asp-action="Index" asp-route-category="@Model.CategoryId">
@@ -25,17 +25,17 @@
             <img src="~/images/@image.FileName"/>
         }
         <p>@Html.DisplayFor(modelItem => Model.Content)</p>
-        <div class="text-right mb-0">
-            <form asp-controller="Vote" asp-action="ProcessVotes">
+        <div class="d-flex mb-0 justify-content-between float-right align-items-center">
+            <form asp-controller="Vote" asp-action="ProcessVotes" class="upvote mr-2">
                 <input type="hidden" asp-for="@articleId"/>
                 <input type="hidden" name="type" value="@VoteType.UpVote"/>
-                <input type="submit" class="btn btn-success" value="Upvote"/>
+                <input type="image" src="/images/upvote.png"/>
             </form>
-            <p>@Html.DisplayFor(modelItem => Model.Rating)</p>
-            <form asp-controller="Vote" asp-action="ProcessVotes">
+            <p class="mr-2">@Html.DisplayFor(modelItem => Model.Rating)</p>
+            <form asp-controller="Vote" asp-action="ProcessVotes" class="downvote">
                 <input type="hidden" asp-for="@articleId"/>
                 <input type="hidden" name="type" value="@VoteType.DownVote"/>
-                <input type="submit" class="btn btn-danger" value="Downvote"/>
+                <input type="image" src="/images/downvote.png"/>
             </form>
         </div>
         @{
@@ -59,20 +59,21 @@
                             <b class="comment-reply">
                                 Ответить
                             </b>
-        
-                            <form asp-controller="Vote" asp-action="ProcessVotesOnReply">
-                                <input type="hidden" asp-for="@commentId"/>
-                                <input type="hidden" name="type" value="@VoteType.UpVote"/>
-                                <input type="submit" class="btn btn-success"/>
-                            </form>
-                            <p>@Html.DisplayFor(modelItem => item.Rating)</p>
-                            <form asp-controller="Vote" asp-action="ProcessVotesOnReply">
-                                <input type="hidden" asp-for="@commentId"/>
-                                <input type="hidden" name="type" value="@VoteType.DownVote"/>
-                                <input type="submit" class="btn btn-danger"/>
-                            </form>
+                                <div class="d-flex mb-0 justify-content-between float-right align-items-center">
+                                    <form asp-controller="Vote" asp-action="ProcessVotesOnReply" class="upvote mr-2">
+                                        <input type="hidden" asp-for="@commentId"/>
+                                        <input type="hidden" name="type" value="@VoteType.UpVote"/>
+                                        <input type="image" src="/images/upvote.png"/>
+                                    </form>
+                                    <p class="mr-2">@Html.DisplayFor(modelItem => item.Rating)</p>
+                                    <form asp-controller="Vote" asp-action="ProcessVotesOnReply" class="downvote">
+                                        <input type="hidden" asp-for="@commentId"/>
+                                        <input type="image" src="/images/downvote.png"/>
+                                    </form>
+                                </div>
+
+                            </div>
                         </div>
-                    </div>
                 }
             }
             else
