--- a/src/GeekStream.Web/Views/Shared/_ArticlesListCards.cshtml
+++ b/src/GeekStream.Web/Views/Shared/_ArticlesListCards.cshtml
@@ -6,8 +6,8 @@
   var articleId = item.Id;
     var categoryIcon = item.CategoryIcon.FileName;
     var userIcon = item.UserIcon.FileName;
-    <div class="card mb-2">
-        <div class="card-body rounded-lg">
+    <div class="card mb-2 card-8px-border">
+        <div class="card-body">
             <div class="card-navbar justify-content-between">
                 <div class="navbar-right">
                     <a name="category" asp-controller="Categories" asp-action="Index" asp-route-category="@item.CategoryId">
@@ -27,18 +27,24 @@
                 <h3 class="card-title"> @Html.DisplayFor(modelItem => item.Title)</h3>
             </a>
             <p>@Html.DisplayFor(modelItem => item.Content)</p>
-            <div class="text-right mb-0">
-            <form asp-controller="Vote" asp-action="ProcessVotes">
-                <input type="hidden" asp-for="@articleId"/>
-                <input type="hidden" name="type" value="@VoteType.UpVote"/>
-                <input type="submit" class="btn btn-success" value="Upvote"/>
-            </form>
-            <p>@Html.DisplayFor(modelItem => item.Rating)</p>
-                <form asp-controller="Vote" asp-action="ProcessVotes">
-                    <input type="hidden" asp-for="@articleId"/>
-                    <input type="hidden" name="type" value="@VoteType.DownVote"/>
-                    <input type="submit" class="btn btn-danger" value="Downvote"/>
-                </form>
+            <div class="d-flex justify-content-between">
+                <div class="float-right d-flex align-items-center">
+                    <img src="/images/comments.png" style="height: 20px" class="mr-2"/>
+                    <p class="text-muted">@item.CommentCount</p>
+                </div>
+                <div class="d-flex mb-0 justify-content-between float-right  align-items-center">
+                    <form asp-controller="Vote" asp-action="ProcessVotes" class="upvote mr-2">
+                        <input type="hidden" asp-for="@articleId"/>
+                        <input type="hidden" name="type" value="@VoteType.UpVote"/>
+                        <input type="image" src="/images/upvote.png"/>
+                    </form>
+                    <p class="mr-2">@Html.DisplayFor(modelItem => item.Rating)</p>
+                    <form asp-controller="Vote" asp-action="ProcessVotes" class="downvote">
+                        <input type="hidden" asp-for="@articleId"/>
+                        <input type="hidden" name="type" value="@VoteType.DownVote"/>
+                        <input type="image" src="/images/downvote.png"/>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
